--- a/modules/ROOT/pages/deployment/storage/posixfs.adoc
+++ b/modules/ROOT/pages/deployment/storage/posixfs.adoc
@@ -47,9 +47,8 @@ Note that it is possible to use different storage drivers in the same Infinite S
 
 To use the PosixFS Storage Driver, the following prerequisites have to be fulfilled:
 
-* There must be storage available to store meta data (extended attributes) and files (equivalent to blobs when using NFS or S3), available under a root path.
-* When using the `inotify` mechanism, the storage must be local on the same machine.
-** This requires `inotifywait` to be installed.
+* There must be storage available to store meta data (extended attributes) and files, available under a root path.
+* When using the `inotify` mechanism, `inotifywait` is required and has to be installed if not present.
 * The storage root path must be writeable and executable by the same user or group Infinite Scale is running under.
 * Infinite Scale must be at version 7 or higher.
 * You must use `nats-js-kv` as cache service, see xref:deployment/services/caching.adoc[Caching and Persistence] for more details.
