Add ocis auth-app create command to the maintenance commands

--- a/modules/ROOT/pages/maintenance/commands/changed-cli.adoc
+++ b/modules/ROOT/pages/maintenance/commands/changed-cli.adoc
@@ -10,6 +10,9 @@
 
 See the link for a detailed description of the respective CLI command if available.
 
+* xref:maintenance/commands/commands.adoc#auth-tokens[Auth-Tokens] +
+The `ocis auth-app create` command allows creating tokens to authenticate 3rd party access.
+
 * xref:maintenance/commands/commands.adoc#cleanup-orphaned-shares[Cleanup Orphaned Shares] +
 The `ocis shares cleanup` command allows for removing share orphans that occur when a shared space or directory got deleted.
 
