--- a/modules/ROOT/partials/multi-location/cache-store.adoc
+++ b/modules/ROOT/partials/multi-location/cache-store.adoc
@@ -7,15 +7,7 @@ tag=** in the include definition to select all the lines in the document except 
 https://docs.asciidoctor.org/asciidoc/latest/directives/include-tagged-regions/#tag-filtering
 ////
 
-ifdef::is_cache[]
-:env_store: OCIS_CACHE_STORE
-:env_nodes: OCIS_CACHE_STORE_NODES
-endif::is_cache[]
-
-ifdef::is_store[]
-:env_store: OCIS_PERSISTENT_STORE
-:env_nodes: OCIS_PERSISTENT_STORE_NODES
-endif::is_store[]
+include::partial$multi-location/env_store_nodes_attribute.adoc[]
 
 The {service_name} service can use a configured store via the global `{env_store}` environment variable.
 
@@ -51,6 +43,13 @@ NOTE: The {service_name} service can only be scaled if not using the `memory` st
 
 NOTE: If you have used one of the deprecated stores of a former version, you should reconfigure to use one of the supported ones as the deprecated stores will be removed in a later version.
 
+tag::store-notes[]
+
+// only because we can include it as own tag, if file is fully included, we dont need to recompute
+ifndef::env_store_nodes[]
+include::partial$multi-location/env_store_nodes_attribute.adoc[]
+endif::[]
+
 Store specific notes::
 +
 --
@@ -62,6 +61,8 @@ The Redis master to use is configured via e.g. `{env_nodes}` in the form of `<se
 ** Authentication can be added, if configured, via `OCIS_CACHE_AUTH_USERNAME` and `OCIS_CACHE_AUTH_PASSWORD`.
 ** It is possible to set `OCIS_CACHE_DISABLE_PERSISTENCE` to instruct nats to not persist cache data on disc.
 --
+
+end::store-notes[]
 
 // create a reference manually so that the link from above is resolved
 
