--- a/modules/ROOT/partials/multi-location/env_store_nodes_attribute.adoc
+++ b/modules/ROOT/partials/multi-location/env_store_nodes_attribute.adoc
@@ -1,5 +1,5 @@
 ////
-This partial only defines the two attributes based on either if cache or sore is set
+This partial only defines the two attributes based on either if cache or store is set
 ////
 
 ifdef::is_cache[]
