--- a/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
+++ b/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
@@ -1,6 +1,7 @@
 = Install Infinite Scale on a Server
 :toc: macro
 :toclevels: 3
+:page-aliases: depl-examples/minimal-bare-metal.adoc, depl-examples/bare-metal.adoc, depl-examples/small-scale.adoc
 :keywords: docker compose, raspberry pi, install, ocis, infinite scale, letsencrypt
 :description: Install Infinite Scale using Docker Compose on a server for production use.
 
