--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -10,27 +10,11 @@ include::partial$multi-location/compose-version.adoc[]
 
 IMPORTANT: We highly recommend reading this document first before you start setting up your system. Many obstacles can be avoided when knowing the basic concepts. Though it is tempting to just give things a try - which is totally ok, you will quickly realize that you may have to start again from scratch before the setup meets your requirements.
 
-The example commands shown need to be adjusted depending on whether you are using the xref:depl-examples/minimal-bare-metal.adoc[Minimal Bare Metal Deployment] or a xref:deployment/container/container-setup.adoc[Container Setup].
-
 When using global options on startup, you can always use command line options or environment variables. Run `ocis help` and see xref:start-infinite-scale-with-environment-variables[] for details.
 
 == Embedded Supervisor (Runtime)
 
-Infinite Scale has an xref:architecture/architecture.adoc#infinite-scale-microservice-runtime[embedded supervisor] for managing the runtime and reducing the memory footprint. In addition, this supervisor takes care that a service will be restarted automatically if it fails. When using an external supervisor like systemd, Kubernetes or others, the embedded supervisor is not needed, the services are managed by the external supervisor.
-
-== Deciding the Startup Mode
-
-The following two mode types do not predefine a particular installation method like the manual or container setup. When using Kubernetes, the embedded supervisor is not necessary, the supervisor of the underlying system is used.
-
-Starting Infinite Scale using the embedded supervisor::
-This mode can be used when scaling is not the primary focus and can be the case if you have a:
-* testing and/or development environment, or
-* small production environment (xref:availability_scaling/availability_scaling.adoc#single-server-setup[Single Server Setup]).
-* See: xref:depl-examples/minimal-bare-metal.adoc[Minimal Bare Metal Deployment] and xref:deployment/container/container-setup.adoc[Container Setup] for more details.
-
-Starting Infinite Scale in unsupervised mode::
-This mode is used when _availability, scaling and the adjustment to dynamically changing requirements_ have a xref:availability_scaling/availability_scaling.adoc#deployment-evolution[high priority]. In this case, an external supervisor like Kubernetes is used to deploy and run Infinite Scale with its services.
-* See: xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration] for more details.
+Infinite Scale has an xref:architecture/architecture.adoc#infinite-scale-microservice-runtime[embedded supervisor] for managing the runtime and reducing the memory footprint. In addition, this supervisor takes care that a service will be restarted automatically if it fails. When using an external supervisor like Kubernetes or others, the embedded supervisor is not needed, the services are managed by the external supervisor.
 
 == Managing Services
 
@@ -44,9 +28,11 @@ When typing `ocis <service-name> --help`, you will get detailed help regarding t
 
 === Manage Instances of Services
 
+Note, to access the `ocis command`, you must enter the shell of the container first.
+
 ==== Infinite Scale Supervised Services
 
-In supervised mode, all services are started with one command as you can see below in the example when using the binary setup. Note that the services started with the runtime share the same PID.
+In supervised mode, all services are started with one command as you can see below. Note that services started with the runtime share the same PID.
 
 Start the Infinite Scale Runtime::
 +
@@ -63,7 +49,7 @@ ocis list
 ----
 
 Stopping the Infinite Scale Runtime::
-In supervised mode, you have to stop the `ocis server` which also stops all services. See xref:depl-examples/minimal-bare-metal.adoc#stopping-infinite-scale[Stopping Infinite Scale] for more details.
+In supervised mode, you have to stop `ocis server` with a graceful shutdown, which also stops all services.
 
 ==== Unsupervised Services
 
@@ -121,7 +107,7 @@ Special configuration settings can be the following:
 * yaml configurations that use an OS environment variable for the value.
 
 yaml only settings::
-There are certain situations where multiple settings using the same keys apply for a configuration set. This can be like in the xref:{s-path}/app-registry.adoc[app-registry] service where default apps for mimetypes are defined. A single environment variable cannot hold all that information. For this case, a yaml configuration is the only way possible. Note that both installation methods, binary and container, can deal with yaml configuration files.
+There are certain situations where multiple settings using the same keys apply for a configuration set. This can be like in the xref:{s-path}/app-registry.adoc[app-registry] service where default apps for mimetypes are defined. A single environment variable cannot hold all that information. For this case, a yaml configuration is the only way possible.
 
 Using OS environment variables in yaml files::
 OS environment variables can be used in yaml config files for Infinite Scale services which will be replaced by the actual value of the environment variable at runtime. This method allows defining a standardized setup, but parameterize it for different use cases. Default values can be specified after a `|` character.
@@ -179,17 +165,6 @@ See xref:using-s3-for-blobs[Using S3 for Blobs] for the S3 configuration.
 
 ** For container images (inside the container) +
 `/etc/ocis/`
-+
-** For binary releases +
-`$HOME/.ocis/config/`
-+
-[NOTE]
-====
-* Do not replace `$HOME` with `~` (tilde).
-** The code does not resolve `~` to the users home directory.
-* Check that `$HOME` resolves to a valid directory.
-** When using a system user for the runtime, which has no login and therefore no home directory, like in the scenario xref:depl-examples/bare-metal.adoc#setup-the-systemd-service[Setup the systemd Service], you *must* specify a configuration file location.
-====
 
 * You can deviate from the default location and define a custom configuration directory on startup using the environment variable `OCIS_CONFIG_DIR`.
 
@@ -256,18 +231,6 @@ The following environment variables can overwrite the base data path if required
 ** For container images (inside the container) +
 `/var/lib/ocis`
 
-** For binary releases +
-`$HOME/.ocis/`
-+
-[NOTE]
-====
-* Do not replace `$HOME` with `~` (tilde).
-** The code does not resolve `~` to the users home directory.
-
-* Check that `$HOME` resolves to a valid directory.
-** When using a system user for the runtime, which has no login and therefore no home directory, like in the generic binary setup scenario xref:depl-examples/bare-metal.adoc#setup-the-systemd-service[Setup the systemd Service] or in the deployment example xref:depl-examples/small-scale.adoc[Small-Scale with systemd], you *must* specify a base directory location because a system user has no logon and therefore no home directory!
-====
-
 * You can deviate from the default location and define a custom base directory on startup using the environment variable `OCIS_BASE_DATA_PATH`.
 
 * More Important Notes
@@ -286,7 +249,7 @@ Read the xref:deployment/storage/s3.adoc[S3] documentation for more details on h
 
 == Initialize Infinite Scale
 
-Infinite Scale can be run by manually defining the environment like you do when using xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration]. When using the xref:depl-examples/minimal-bare-metal.adoc[Minimal Bare Metal Deployment] or the xref:deployment/container/container-setup.adoc[Container Setup], you can prepare Infinite Scale for further configuration and recurring starts. After reading xref:deployment/general/ocis-init.adoc[The ocis init Command] for important details, start the initialization. To do so, run:
+Infinite Scale can be run by manually defining the environment like you do when using xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration]. When using the xref:deployment/container/container-setup.adoc[Container Setup], you can prepare Infinite Scale for further configuration and recurring starts. After reading xref:deployment/general/ocis-init.adoc[The ocis init Command] for important details, start the initialization. To do so, run:
 
 [source,bash]
 ----
@@ -645,7 +608,6 @@ idm:
 ====
 To reset the admin password, you either must:
 
-* Shutdown Infinite scale if you are using the binary setup.
 * Stop the container if you are using a docker setup.
 * Shut down the environment if you are using docker compose. +
 Note that the environment must be shut down. Stopping or pausing is not sufficient. +
@@ -656,15 +618,6 @@ This is because the IDM service needs exclusive access to particular backend inf
 ====
 
 When the prerequisite from the note above is fulfilled, you can reset the admin password as described below. When finished, the Infinite Scale instance respectively the IDM service can be started again and the new admin password is available. 
-
-==== Binary Setup
-
-Run the following command to reset the admin password, use `--user-name <user>` for ordinary users:
-
-[source,bash]
-----
-ocis idm resetpassword
-----
 
 ==== Container and Orchestrated Setup
 
