--- a/modules/ROOT/pages/deployment/services/s-list/collaboration.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/collaboration.adoc
@@ -38,7 +38,7 @@ The collaboration service requires the target document server (ONLYOFFICE, Colla
 * xref:{s-path}/gateway.adoc[gateway] service.
 * xref:{s-path}/app-provider.adoc[app provider] service.
 
-If any of the named services above have not been started or are not reachable, the collaboration service won't start. For the binary or the docker release of Infinite Scale, check with the xref:deployment/general/general-info.adoc#infinite-scale-supervised-services[List running services] command if they have been started. If not, you must start them manually upfront before starting the collaboration service.
+If any of the named services above have not been started or are not reachable, the collaboration service won't start. Check with the xref:deployment/general/general-info.adoc#infinite-scale-supervised-services[List running services] command if they have been started. If not, you must start them manually upfront before starting the collaboration service.
 
 == WOPI Configuration
 
